--- a/package.json
+++ b/package.json
@@ -1,40 +1,39 @@
 {
-  "name": "native-web",
+  "name": "platform",
   "version": "1.0.0",
-  "description": "",
+  "description": "platform to develop web applications",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack-dev-server --port 3000 --config webpack.config.dev.js --inline --hot --colors "
+    "build": "watchify src/app.js -o public/bin/app.bundle.js -t [ babelify --presets [ react es2015 ] ]",
+    "server": "cd public; live-server --port=9999 --entry-file=index.html",
+    "dev": "webpack-dev-server --content-base public/ --port 8888 --config webpack.config.js --inline --hot --colors "
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "file-loader": "^0.9.0",
-    "material-ui": "^0.15.2",
-    "react": "^15.3.0",
-    "react-highlight-words": "^0.3.0",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
+    "babelify": "^7.3.0",
+    "fuzzysearch": "^1.0.3",
+    "live-server": "^1.1.0",
+    "material-ui": "^0.16.1",
+    "react": "^15.3.2",
     "react-lazy-load": "^3.0.10",
-    "react-native-infinite-scroll-view": "^0.4.2",
-    "react-native-web": "0.0.40",
+    "react-native": "^0.36.0",
+    "react-native-cli": "^1.0.0",
+    "react-native-web": "0.0.47",
     "react-redux": "^4.4.5",
+    "react-router": "^3.0.0",
+    "react-router-redux": "^4.0.6",
     "react-tap-event-plugin": "^1.0.0",
-    "redux": "^3.5.2",
-    "redux-infinite-scroll": "^1.0.9",
-    "redux-search": "^2.1.0",
-    "redux-thunk": "^2.1.0",
-    "reselect": "^2.5.3",
-    "url-loader": "^0.5.7"
+    "redux": "^3.6.0",
+    "watchify": "^3.7.0"
   },
   "devDependencies": {
-    "babel-core": "^6.11.4",
-    "babel-loader": "^6.2.4",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-react": "^6.11.1",
-    "babel-preset-stage-1": "^6.5.0",
-    "babel-runtime": "^6.11.6",
-    "webpack": "^1.13.1",
-    "webpack-dev-server": "^1.14.1"
+    "babel-core": "^6.18.0",
+    "babel-loader": "^6.2.7",
+    "babel-preset-es2015": "^6.18.0",
+    "webpack": "^1.13.3"
   }
 }
